<?xml version="1.0"?>
<package format="2">
  <name>plane_detection</name>
  <version>0.1.0</version>
  <description>
    A ROS package for processing point cloud data using PCL (Point Cloud Library).
  </description>

  <!-- Maintainers of the package -->
  <maintainer email="youremail@example.com">Your Name</maintainer>

  <!-- License for the package -->
  <license>BSD</license>

  <!-- Dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <!-- Build dependencies -->
  <build_depend>catkin</build_depend>
  <build_depend>pcl_catkin</build_depend>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Export dependencies (optional) -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
